--- a/public/gameplay.html
+++ b/public/gameplay.html
@@ -59,10 +59,7 @@
         .actions .container {
             backdrop-filter: blur(20px);
             border: 3px solid var(--primary-gold);
-            background: linear-gradient(135deg, 
-                rgba(45, 27, 61, 0.95) 0%, 
-                rgba(30, 30, 46, 0.95) 50%, 
-                rgba(45, 45, 77, 0.95) 100%);
+            background: rgba(30, 30, 46, 0.95);
             box-shadow: 
                 0 15px 40px rgba(0, 0, 0, 0.6),
                 0 8px 25px rgba(255, 215, 0, 0.2),
@@ -72,9 +69,7 @@
         .ability {
             padding: 15px;
             margin: 10px 0;
-            background: linear-gradient(135deg, 
-                rgba(45, 27, 61, 0.9) 0%, 
-                rgba(30, 30, 46, 0.95) 100%);
+            background: rgba(30, 30, 46, 0.9);
             border: 2px solid var(--mystical-blue);
             border-radius: var(--border-radius);
             cursor: pointer;
@@ -107,9 +102,7 @@
                 0 6px 20px rgba(0, 0, 0, 0.4),
                 inset 0 1px 0 rgba(255, 215, 0, 0.2);
             border-color: var(--primary-gold);
-            background: linear-gradient(135deg, 
-                rgba(74, 44, 26, 0.9) 0%, 
-                rgba(45, 27, 61, 0.95) 100%);
+            background: rgba(40, 40, 56, 0.95);
         }
         
         .ability:hover::before {
@@ -139,9 +132,7 @@
         }
         
         .stat-item {
-            background: linear-gradient(135deg, 
-                rgba(255, 215, 0, 0.15) 0%, 
-                rgba(74, 144, 226, 0.1) 100%);
+            background: rgba(40, 40, 56, 0.7);
             padding: 10px 15px;
             border-radius: var(--border-radius);
             border: 1px solid rgba(255, 215, 0, 0.4);
