--- a/public/login.html
+++ b/public/login.html
@@ -46,9 +46,7 @@
         }
         
         .divider span {
-            background: linear-gradient(135deg, 
-                rgba(44, 24, 16, 0.95) 0%, 
-                rgba(74, 44, 26, 0.9) 100%);
+            background: rgba(30, 30, 46, 0.95);
             padding: 0 1rem;
             color: var(--primary-gold);
             font-family: 'Cinzel', serif;
