--- a/public/gameplay.html
+++ b/public/gameplay.html
@@ -486,7 +486,7 @@
                         <option value="d12">d12</option>
                         <option value="d20" selected>d20</option>
                     </select>
-                    <button onclick="rollDice()">Бросить кубик</button>
+                    <button onclick="rollDice()">Бросить</button>
                 </div>
                 <div id="diceResult" class="dice-result" style="display: none;"></div>
             </div>
