--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="theme-color" content="#d4a017">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>Терновая гряда D&D - Создание персонажа</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         body {
             padding: 20px;
@@ -733,6 +737,13 @@
         function closeModal() {
             const modal = document.getElementById('successModal');
             modal.style.display = 'none';
+        }
+
+        // Инициализация Telegram Web App
+        if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
+            Telegram.WebApp.ready();
+            Telegram.WebApp.expand();
+            document.body.classList.add('telegram-webapp');
         }
 
         window.onload = function() {
