--- a/public/login.html
+++ b/public/login.html
@@ -2,9 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="theme-color" content="#d4a017">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>Терновая гряда D&D - Вход</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         body {
             display: flex;
@@ -128,6 +132,13 @@
                 errorDiv.textContent = 'Выберите персонажа из списка';
                 errorDiv.style.display = 'block';
             }
+        }
+
+        // Инициализация Telegram Web App
+        if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
+            Telegram.WebApp.ready();
+            Telegram.WebApp.expand();
+            document.body.classList.add('telegram-webapp');
         }
 
         window.onload = loadCharacters;
