--- a/public/gameplay.html
+++ b/public/gameplay.html
@@ -612,7 +612,7 @@
                     <option value="d12">d12</option>
                     <option value="d20" selected>d20</option>
                 </select>
-                <button onclick="rollDice(true)">Бросить кубик</button>
+                <button onclick="rollDice(true)">Бросить</button>
             </div>
             <div id="mobileDiceResult" class="dice-result" style="display: none;"></div>
         </div>
