--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,9 @@
             min-height: 100vh;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
             position: relative;
+            overflow-y: auto;
         }
         
         .page-container {
